force-app/main/default/objects/Idea_Score__c/Idea_Score__c.object-meta.xml
<CustomObject>
    <label>Idea Score</label>
    <nameField>
        <label>Idea Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idea Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>