force-app/main/default/objects/Idea_Score__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Criteria</label>
    <referenceTo>Idea_Score__c</referenceTo>
    <relationshipLabel>Idea Scores</relationshipLabel>
    <relationshipName>Idea_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>