force-app/main/default/objects/Idea_Score__c/fields/Idea__c.field-meta.xml
<CustomField>
    <fullName>Idea__c</fullName>
    <label>Idea</label>
    <referenceTo>Idea__c</referenceTo>
    <relationshipLabel>Idea Scores</relationshipLabel>
    <relationshipName>Idea_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>