force-app/main/default/objects/Idea_Score__c/fields/Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Scorecard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scorecard</label>
    <referenceTo>Scorecard__c</referenceTo>
    <relationshipLabel>Idea Scores</relationshipLabel>
    <relationshipName>Idea_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>